SR-60: Add theme in mainWrapper, fix z-index in header

--- a/src/modules/Header/MainHeader/MainHeader.module.scss
+++ b/src/modules/Header/MainHeader/MainHeader.module.scss
@@ -6,6 +6,7 @@
   transition: var(--transition);
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .header--light {
